# PyImportGraph

./: .gitignore  README.md  pyproject.toml
docs/: github_plan.md  json_upload.md  specs.md  tentative_plan.md  todo.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CollapsibleCard.tsx  DefinitionTable.tsx  EmptyState.tsx  ForceGraph.tsx  ForceGraphControls.tsx  KeyValueList.tsx  ModuleName.tsx  SectionHeader.tsx  SimpleList.tsx
frontend/src/components/forceGraph/: ForceGraph.tsx  ForceGraphCanvas.tsx  ForceGraphControls.tsx  ForceGraphEdgeControls.tsx  ForceGraphLegend.tsx  ForceGraphPackagesPanel.tsx  ForceGraphPackagesPanelHeader.tsx  MultiplierSlider.tsx  PackageInfluenceControls.tsx  PackageTreeNode.tsx  PackageTreeNodeFooter.tsx  PackageTreeNodeHeader.tsx  ToggleSwitch.tsx  buildGraphData.ts  buildMutualPackageDependencies.ts  graphColors.ts  graphDisplay.ts  graphInfluence.ts  graphRelationships.ts  graphStyling.ts  presets.ts  (+7 more)
frontend/src/hooks/: useSnapshot.ts
frontend/src/lib/: anchor.ts  filters.ts  format.ts  moduleName.ts
frontend/src/types/: d3-force-3d.d.ts
scripts/: test_grimp.py
src/pyimportgraph/: __init__.py  cli.py  web_cli.py
src/pyimportgraph/analysis/: __init__.py  package_dependencies.py  package_query.py  project_model.py  symbol_usage.py
src/pyimportgraph/graph/: __init__.py  model.py
src/pyimportgraph/model/: module_naming.py  package_tree.py
src/pyimportgraph/render/: __init__.py  cli_output.py
src/pyimportgraph/reporting/: _format.py  external_symbols.py  full_report.py  module_detail.py  package_detail.py  packages.py  summary.py  symbols.py  who_uses.py
src/pyimportgraph/scan/: ast_reader.py  builder.py  discovery.py
src/pyimportgraph/serialization/: __init__.py  frontend_snapshot.py  project_snapshot.py
src/pyimportgraph/web/: __init__.py  app.py
tests/: shared.py
tests/e2e/: cli_test.py
tests/integration/scan/: builder_test.py
tests/unit/scan/: ast_reader_test.py  discovery_tests.py
(+6 files in other folders)
