[project]
name = "pyimportgraph"
version = "0.1.0"
description = "static analysis tool that generates a graph of all module imports in an application and displays them cleanly."
authors = [
    {name = "=",email = "ngstafford1@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.15.11,<0.16.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "networkx (>=3.6.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
