[project]
name = "pyimportgraph"
version = "0.1.0"
description = "Static analysis tool that generates a graph of module imports in a Python application and displays them clearly."
authors = [{ name = "Nicholas Stafford", email = "ngstafford1@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["networkx>=3.6.1,<4.0.0"]

[project.scripts]
pyimportgraph = "pyimportgraph.cli:main"

[tool.poetry]
packages = [{ include = "pyimportgraph" }]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.11,<0.16.0"
pyright = ">=1.1.408,<2.0.0"
pytest = ">=9.0.3,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
